@@ -120,3 +120,15 @@ test_that("correct number of rows outputted", {
 
   expect_that(nrow(res), equals(3))
 })
+
+
+test_that("matrices converted to data frames", {
+  mat <- matrix(1:20, ncol = 4)
+  colnames(mat) <- letters[1:4]
+
+  li <- list(a = mat, b = mat)
+  df <- list_to_dataframe(li)
+
+  expect_equal(nrow(df), 2 * nrow(mat))
+  expect_equal(names(df), c(".id", "a", "b", "c", "d"))
+})
